2014-05-18  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Die on errors.

	* elisp-common.eclass (elisp-site-regen): Look for site-init files
	only in site-gentoo.d subdirectory.

2013-10-31  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Don't create
	site-gentoo.el in postrm phase.

2013-09-04  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass: Add proper @CODE tags in comments.

2013-07-18  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-emacs-version): Unset TERM and
	DISPLAY so that microemacsen won't hang, but exit with an error.

2013-07-16  Mats Lidell  <matsl@gentoo.org>

	* xemacs-packages.eclass (xemacs-packages_src_prepare)
	(xemacs-packages_src_configure): New functions that does
	nothing. Needed for EAPI>2 support.

2013-03-04  Ulrich Müller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_install, elisp_pkg_postinst):
	Call readme.gentoo_create_doc and readme.gentoo_print_elog
	from readme.gentoo.eclass if these functions exist.

2013-02-26  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-compile, elisp-make-autoload-file)
	(elisp-install, elisp-site-file-install): Die on failure.
	* elisp.eclass (elisp_src_compile, elisp_src_install): Remove die
	commands that are no longer necessary because the called functions
	die themselves.

2012-12-12  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-need-emacs): Return 2 as exit status
	if the comparison could not be done, e.g., if emacs could not be
	executed in elisp-emacs-version.
	* elisp.eclass (elisp_pkg_setup): Distinguish between "version too
	low" and "could not determine version".

2012-09-11  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Remove last remnants of
	backwards compatibility code that was introduced at 2007-12-01.

2012-08-24  Ulrich Müller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Suppress warning for
	initial installation.
