@@ -1,3 +1,8 @@
+2014-06-07  Ulrich Müller  <ulm@gentoo.org>
+
+	* elisp.eclass (DEPEND): Increase minimum Emacs version to 23.
+	(elisp_pkg_setup): Ditto.
+
 2014-05-18  Ulrich Müller  <ulm@gentoo.org>
 
 	* elisp-common.eclass (elisp-site-regen): Die on errors.
